--- a/package.json
+++ b/package.json
@@ -2,5 +2,26 @@
   "name": "project-4",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "repository": "https://github.com/wdi-sg/project-4.git",
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon"
+  },
+  "dependencies": {
+    "async": "^2.5.0",
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
+    "cloudinary": "^1.9.1",
+    "connect-mongo": "^2.0.0",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "helpers": "^0.0.6",
+    "method-override": "^2.3.10",
+    "mongoose": "^4.12.4",
+    "nodemon": "^1.12.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
+  }
 }
