--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "nodemon"
   },
   "dependencies": {
-    "async": "^2.5.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cloudinary": "^1.9.1",
@@ -19,6 +18,7 @@
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "mongoose": "^4.12.4",
+    "multer": "^1.3.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
