--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mongoose": "^4.12.4",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   },
   "author": "Charmaine <charlimxm@gmail.com>"
 }
