--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "socket.io": "^2.0.4"
   },
   "author": "Charmaine <charlimxm@gmail.com>"
 }
